Finishing layout of the main content except the trending part.

--- a/index.html
+++ b/index.html
@@ -58,72 +58,87 @@
             </ul>
         </div>
         <div class="main_content">
-            <div class="your_projects">Your Progects
-                <div class="card" id="card1">
-                    <div class="project">The Cool One</div>
-                    <div class="description">It's never comforting to know that your fate depends on something as unpredictable as the popping of corn.</div>
-                    <div class="buttons">
-                        <button><img src="./icons/star-plus.svg" alt="save"></button>
-                        <button><img src="./icons/cards-heart.svg" alt="like"></button>
-                        <button><img src="./icons/share-variant.svg" alt="share"></button>
+            <div class="your_projects">
+                <div id="your_projects">Your Progects</div>
+                <div class="cards">
+                    <div class="card" id="card1">
+                        <div class="buttons">
+                            <button><img src="./icons/star-plus.svg" alt="save"></button>
+                            <button><img src="./icons/cards-heart.svg" alt="like"></button>
+                            <button><img src="./icons/share-variant.svg" alt="share"></button>
+                        </div>
+                        <div class="project">The Cool One</div>
+                        <div class="description">It's never comforting to know that your fate depends on something as unpredictable as the popping of corn.</div>
                     </div>
-                </div>
-                <div class="card" id="card2">
-                    <div class="project">EWWWW</div>
-                    <div class="description">He was disappointed when he found the beach to be so sandy and the sun so sunny.</div>
-                    <div class="buttons">
-                        <button><img src="./icons/star-plus.svg" alt="save"></button>
-                        <button><img src="./icons/cards-heart.svg" alt="like"></button>
-                        <button><img src="./icons/share-variant.svg" alt="share"></button>
+                    <div class="card" id="card2">
+                        <div class="buttons">
+                            <button><img src="./icons/star-plus.svg" alt="save"></button>
+                            <button><img src="./icons/cards-heart.svg" alt="like"></button>
+                            <button><img src="./icons/share-variant.svg" alt="share"></button>
+                        </div>
+                        <div class="project">EWWWW</div>
+                        <div class="description">He was disappointed when he found the beach to be so sandy and the sun so sunny.</div>
                     </div>
-                </div>
-                <div class="card" id="card3">
-                    <div class="project">Brother What's That</div>
-                    <div class="description">Acres of almond trees lined the interstate highway which complimented the crazy driving nuts.</div>
-                    <div class="buttons">
-                        <button><img src="./icons/star-plus.svg" alt="save"></button>
-                        <button><img src="./icons/cards-heart.svg" alt="like"></button>
-                        <button><img src="./icons/share-variant.svg" alt="share"></button>
+                    <div class="card" id="card3">
+                        <div class="buttons">
+                            <button><img src="./icons/star-plus.svg" alt="save"></button>
+                            <button><img src="./icons/cards-heart.svg" alt="like"></button>
+                            <button><img src="./icons/share-variant.svg" alt="share"></button>
+                        </div>
+                        <div class="project">Brother What's That</div>
+                        <div class="description">Acres of almond trees lined the interstate highway which complimented the crazy driving nuts.</div>
                     </div>
-                </div>
-                <div class="card" id="card4">
-                    <div class="project">Boss</div>
-                    <div class="description">Everybody should read Chaucer to improve their everyday vocabulary.</div>
-                    <div class="buttons">
-                        <button><img src="./icons/star-plus.svg" alt="save"></button>
-                        <button><img src="./icons/cards-heart.svg" alt="like"></button>
-                        <button><img src="./icons/share-variant.svg" alt="share"></button>
+                    <div class="card" id="card4">
+                        <div class="buttons">
+                            <button><img src="./icons/star-plus.svg" alt="save"></button>
+                            <button><img src="./icons/cards-heart.svg" alt="like"></button>
+                            <button><img src="./icons/share-variant.svg" alt="share"></button>
+                        </div>
+                        <div class="project">Boss</div>
+                        <div class="description">Everybody should read Chaucer to improve their everyday vocabulary.</div>
                     </div>
-                </div>
-                <div class="card" id="card5">
-                    <div class="project">Clay</div>
-                    <div class="description">He had unknowingly taken up sleepwalking as a nighttime hobby.</div>
-                    <div class="buttons">
-                        <button><img src="./icons/star-plus.svg" alt="save"></button>
-                        <button><img src="./icons/cards-heart.svg" alt="like"></button>
-                        <button><img src="./icons/share-variant.svg" alt="share"></button>
+                    <div class="card" id="card5">
+                        <div class="buttons">
+                            <button><img src="./icons/star-plus.svg" alt="save"></button>
+                            <button><img src="./icons/cards-heart.svg" alt="like"></button>
+                            <button><img src="./icons/share-variant.svg" alt="share"></button>
+                        </div>
+                        <div class="project">Clay</div>
+                        <div class="description">He had unknowingly taken up sleepwalking as a nighttime hobby.</div>
                     </div>
-                </div>
-                <div class="card" id="card6">
-                    <div class="project">Home Sick</div>
-                    <div class="description">It must be easy to commit crimes as a snake because you don't have to worry about leaving fingerprints.</div>
-                    <div class="buttons">
-                        <button><img src="./icons/star-plus.svg" alt="save"></button>
-                        <button><img src="./icons/cards-heart.svg" alt="like"></button>
-                        <button><img src="./icons/share-variant.svg" alt="share"></button>
+                    <div class="card" id="card6">
+                        <div class="buttons">
+                            <button><img src="./icons/star-plus.svg" alt="save"></button>
+                            <button><img src="./icons/cards-heart.svg" alt="like"></button>
+                            <button><img src="./icons/share-variant.svg" alt="share"></button>
+                        </div>
+                        <div class="project">Home Sick</div>
+                        <div class="description">It must be easy to commit crimes as a snake because you don't have to worry about leaving fingerprints.</div>
                     </div>
                 </div>
             </div>
-            <div class="announcements">Announcements
-                <div class="acard">Site Maintenance</div>
-                <div class="acard">Community Share Day</div>
-                <div class="acard">Update Privacy Policy</div>
+            <div class="announcements">
+                <div id="announcements">Announcements</div>
+                <div class="acards">
+                    <div class="acard">
+                        <div class="announcement" id="acard1">Site Maintenance</div>
+                        <div class="announcement_content">The elephant didn't want to talk about the person in the room.</div> 
+                    </div>
+                    <div class="acard">
+                        <div class="announcement">Community Share Day</div>
+                        <div class="announcement_content">A song can make or ruin a person's day if they let it get to them.</div>
+                    </div>
+                    <div class="acard">
+                        <div class="announcement">Update Privacy Policy</div>
+                        <div class="announcement_content">She is never happy until she finds something to be unhappy about; then, she is overjoyed.</div>
+                    </div>
+                </div>
             </div>
             <div class="trending">Trending
-                <div class="accounts"></div>
-                <div class="accounts"></div>
-                <div class="accounts"></div>
-                <div class="accounts"></div>
+                <div class="accounts">a</div>
+                <div class="accounts">a</div>
+                <div class="accounts">a</div>
+                <div class="accounts">a</div>
             </div>
         </div>
     </div>
