Done the trending part and correct the button styles of the cards.

--- a/index.html
+++ b/index.html
@@ -134,11 +134,30 @@
                     </div>
                 </div>
             </div>
-            <div class="trending">Trending
-                <div class="accounts">a</div>
-                <div class="accounts">a</div>
-                <div class="accounts">a</div>
-                <div class="accounts">a</div>
+            <div class="trending">
+                <div id="trending">Trending</div>
+                <div class="friends">
+                    <div class="friend">
+                        <img src="./photo/cat.jpeg" alt="Cat A">
+                        <div class="id">@cat_a</div>
+                        <div class="name">Taitung King</div>
+                    </div>
+                    <div class="friend" id="loading_cat_account">
+                        <img id="loading_cat" src="./photo/loadingcat.jpeg" alt="Loding Cat">
+                        <div class="id">@loading_cat</div>
+                        <div class="name">Still Loading</div>
+                    </div>
+                    <div class="friend" id="rabbit_account">
+                        <img id="rabbit" src="./photo/rabbit.jpeg" alt="Rabbits">
+                        <div class="id">@rabbit22</div>
+                        <div class="name">Zoo Keeper</div>
+                    </div>
+                    <div class="friend">
+                        <img src="./photo/bird.jpeg" alt="Bird in the Field">
+                        <div class="id">@big_bird</div>
+                        <div class="name">Field Guardian</div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
